Footer alignment fixed

--- a/src/styles/footerstyle.module.css
+++ b/src/styles/footerstyle.module.css
@@ -13,6 +13,10 @@
   max-width: 200px;
   height: auto;
   margin-bottom: 15px;
+  box-shadow: none;
+  display: inline-block; /* Override global block display */
+  margin-left: auto; /* Center horizontally */
+  margin-right: auto; /* Center horizontally */
 }
 
 /* Footer Text */
